get settings pipeline
